libdebian-installer (0.63) UNRELEASED; urgency=low

  [ Michael Casadevall ]
  * Add subarchitecture imx51 for Freescale iMX51 SoCs (LP: #345534).

 -- Colin Watson <cjwatson@debian.org>  Tue, 28 Apr 2009 11:38:05 +0100

libdebian-installer (0.62) unstable; urgency=low

  [ Martin Michlmayr ]
  * Add support for Marvell's Kirkwood platform, including devices
    such as the SheevaPlug and QNAP TS-219.

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 27 Mar 2009 18:03:49 +0100

libdebian-installer (0.61) unstable; urgency=low

  [ Bastian Blank ]
  * Fix off-by-one error in the rfc822 parser (closes: #500378).
  * Remove workarounds for ignored errors.

 -- Frans Pop <fjp@debian.org>  Sat, 27 Sep 2008 18:37:27 +0200

libdebian-installer (0.60) unstable; urgency=low

  [ Colin Watson ]
  * Remove incorrect unused attribute from di_packages_parser_read_name's
    user_data parameter.
  * Appease the combination of _FORTIFY_SOURCE=2 (used by default on Ubuntu)
    and -Werror. Why exactly glibc demands that fwrite be checked but not
    fputs is beyond me.

 -- Otavio Salvador <otavio@debian.org>  Tue, 23 Sep 2008 21:36:38 -0300

libdebian-installer (0.59) unstable; urgency=low

  * Apply patch to include 'Apple Inc.' as a possible vendor string for a
    Intel's based Mac. Thanks to Julien BLACHE <jblache@debian.org> for
    the patch (closes: #483182).

 -- Otavio Salvador <otavio@debian.org>  Tue, 29 Jul 2008 12:13:29 -0300

libdebian-installer (0.58) unstable; urgency=low

  [ Martin Michlmayr ]
  * Add support for QNAP TS-409 (orion5x)
  * Add support for HP Media Vault mv2120 (orion5x).
  * Add support for Buffalo Linkstation Pro/Live (orion5x).

 -- Martin Michlmayr <tbm@cyrius.com>  Sun, 11 May 2008 09:44:21 +0200

libdebian-installer (0.57) unstable; urgency=low

  [ Frans Pop ]
  * Add support for PA Semi's evaluation systems (closes: #464429).
    Thanks to Olof Johansson for the patch.

  [ Martin Michlmayr ]